--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav>
             <ul>
                 <li><a href="bio.html">Bio</a></li>
-                <li><a href="Assignment 1/index.html">Assignment 1</a></li>
+                <li><a href="Assignment 1/webPerspective.html">Assignment 1</a></li>
                 <li><a href="Assignment 2/index.html">Assignment 2</a></li>
                 <li><a href="">Assignment 3</a></li>
                 <li><a href="">Assignment 4</a></li>
