fixed more images

--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -86,7 +86,7 @@
     </main>
     <footer>
       <p>I do thing</p>
-      <a href="https://neocities.org/" target="_blank"><img src="/neocities.png"></a>
+      <a href="https://neocities.org/" target="_blank"><img src="neocities.png" alt="Hosted by Neocities"></a>
     </footer>
   </body>
 </html>
