--- a/Assignment 1/webPerspective.html
+++ b/Assignment 1/webPerspective.html
@@ -58,7 +58,7 @@
     </main>
     <footer>
       <p>&#169Benjamin Montross, 2024 (Cause of course that's a requirement. Professionalism at it's finest.)</p>
-      <a href="https://neocities.org/" target="_blank"><img src="/neocities.png"></a>
+      <a href="https://neocities.org/" target="_blank"><img src="neocities.png"></a>
     </footer>
   </body>
 </html>
