Nothing site with nothing to see what so ever.

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                 <li><a href="bio.html">Bio</a></li>
                 <li><a href="Assignment 1/webPerspective.html">Assignment 1</a></li>
                 <li><a href="Assignment 2/index.html">Assignment 2</a></li>
-                <li><a href="">Assignment 3</a></li>
-                <li><a href="">Assignment 4</a></li>
-                <li><a href="">Assignment 5</a></li>
-                <li><a href="">Assignment 6</a></li>
-                <li><a href="">Topic Proposal</a></li>
-                <li><a href="">Research Interviews</a></li>
-                <li><a href="">Creative Exploration</a></li>
-                <li><a href="">Wireframe + Style Guide</a></li>
-                <li><a href="">Completion</a></li>
+                <li><a href="Assignment 3/index.html">Assignment 3</a></li>
+                <li><a href="Assignment 4/index.html">Assignment 4</a></li>
+                <li><a href="Assignment 5/index.html">Assignment 5</a></li>
+                <li><a href="Assignment 6/index.html">Assignment 6</a></li>
+                <li><a href="Topic Proposal/index.html">Topic Proposal</a></li>
+                <li><a href="Research Interviews/index.html">Research Interviews</a></li>
+                <li><a href="Creative Exploration/index.html">Creative Exploration</a></li>
+                <li><a href="Wireframe + Style Guide/index.html">Wireframe + Style Guide</a></li>
+                <li><a href="Completion/index.html">Completion</a></li>
             </ul>
         </nav>
     </main>
